2014-10-26  Richard Sandiford  <richard.sandiford@arm.com>

	* config/xtensa/xtensa.c: Include rtl-iter.h.
	(xtensa_tls_referenced_p_1): Delete.
	(xtensa_tls_referenced_p): Use FOR_EACH_SUBRTX.

2014-10-26  Richard Sandiford  <richard.sandiford@arm.com>

	* config/sh/sh.c (sh_contains_memref_p_1): Delete.
	(sh_contains_memref_p): Use FOR_EACH_SUBRTX.

2014-10-26  Richard Sandiford  <richard.sandiford@arm.com>

	* config/sh/sh-protos.h (shmedia_cleanup_truncate): Take an
	rtx as argument and return the number of changes.
	* config/sh/sh.c: Include rtl-iter.h.
	(shmedia_cleanup_truncate): Take an rtx as argument and iterate
	over all subrtxes.  Return the number of changes made.
	* config/sh/sh.md: Update caller accordingly.

2014-10-26  Richard Sandiford  <richard.sandiford@arm.com>

	* config/m68k/m68k.c (m68k_tls_reference_p_1): Delete.
	(m68k_tls_reference_p): Use FOR_EACH_SUBRTX_VAR.

2014-10-26  Richard Sandiford  <richard.sandiford@arm.com>

	* config/m68k/m68k.c: Include rtl-iter.h.
	(m68k_final_prescan_insn_1): Delete.
	(m68k_final_prescan_insn): Use FOR_EACH_SUBRTX_VAR.

2014-10-25  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/63641
	* tree-ssa-reassoc.c (optimize_range_tests_to_bit_test): Set high
	to low + prec - 1 - clz (mask) instead of low + prec - clz (mask).

2014-10-25  Alan Modra  <amodra@gmail.com>

	PR rtl-optimization/63615
	* simplify-rtx.c (simplify_plus_minus): Set "canonicalized" on
	decomposing PLUS or MINUS if operands are not placed adjacent
	in the "ops" array.

2014-10-25  Joseph Myers  <joseph@codesourcery.com>

	* config/rs6000/rs6000.c (rs6000_hard_regno_nregs_internal): Do
	not allow e500 double in registers not satisyfing
	SPE_SIMD_REGNO_P.

2014-10-24  Aldy Hernandez  <aldyh@redhat.com>

	* dwarf2out.c (declare_in_namespace): Only emit external
	declarations in the local scope once.

2014-10-24  Jonathan Wakely  <jwakely@redhat.com>

	* ginclude/stdbool.h: Do not define bool, true or false in C++11.
